kubernetes/apps/observability/victoria-logs/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-skeemahs.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
spec:
  hostnames:
    - victoria-logs.housefam.casa
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /select/vmui/
            statusCode: 302
    - backendRefs:
        - name: victoria-logs-server
          port: 9428
